hard-gists/1390853/run.log
=== Docker Run Log for 1390853 ===
Started at: Mi 29. Okt 12:12:08 CET 2025

[2025-10-29 12:12:08] START: Running container for 1390853
[2025-10-29 12:12:08] SUCCESS: Container b1161a2f5ab6dbb9fc4c2f30a9779eac63db5a33ac202224d11e8cfccddbe00c started for 1390853
=== Container logs for 1390853 ===
  File "/snippet.py", line 31
    print "\n\n%s\033[1;35m[SQL Queries for]\033[1;34m %s\033[0m\n" % (" " * indentation, request.path_info)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1390853 ===
[2025-10-29 12:12:10] INFO: Container b1161a2f5ab6dbb9fc4c2f30a9779eac63db5a33ac202224d11e8cfccddbe00c has stopped
